test/expected/explain_auf-c++11.out
explain auto f()
        ^
9: error: function returning "auto" not supported until C++14
